--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_riverpod: ^1.0.3
   flutter_staggered_grid_view: ^0.6.1
+  flutterfire_ui: ^0.3.5+1
+  flutter_dotenv: ^5.0.2
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +72,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env.dev
+    - .env.prod
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
